fix(wizard): set height variation for overflow
set a new height variation on a higher parent element to account/fix the overflow issues

fixes https://github.com/openshiftio/openshift.io/issues/1155

--- a/src/app/space/forge-wizard/quickstart-wizard.component.less
+++ b/src/app/space/forge-wizard/quickstart-wizard.component.less
@@ -1,11 +1,6 @@
-.wizard-sidebar {
-  height: 500px;
-  max-height: 500px;
+.wizard-pf-row {
+  /* stylelint-disable */
+  height: 380px !important;
   overflow-y: auto;
-}
-.wizard-step {
-  height: 500px;
-  min-height: 450px;
-  max-height: 500px;
-  overflow-y: auto;
+  /* stylelint-enable */
 }
